--- a/web-nodejs/views/partials/home.html
+++ b/web-nodejs/views/partials/home.html
@@ -30,7 +30,7 @@
 				    	</select>
 
                         </div>
-                        <button ng-click="addToCart(item)" type="submit" class="btn btn-default">Add To Cart</button>
+                        <button ng-click="addToCart(item)" type="submit" class="btn btn-default">Add To Cart Krupa</button>
                     </form>
                 </div>
             </div>
