--- a/web-nodejs/views/partials/header.html
+++ b/web-nodejs/views/partials/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#/">
-        <img ng-src="/app/imgs/logo.png" alt="Red Hat Logo" width="200" />
+        <img ng-src="/app/imgs/logo.png" alt="Travelport Logo" width="200" />
       </a>
     </div>
     <div class="collapse navbar-collapse navbar-collapse-1">
@@ -43,7 +43,7 @@
           <a ng-href="#/" class="active">Red Hat Cool Store</a>
         </li>
           <li ng-class="{ active: isActive('/cart')}">
-          <a ng-href="#/cart">Your Shopping Cart</a>
+          <a ng-href="#/cart">Your Shopping Cart Krupa</a>
         </li>
       </ul>
     </div>
