--- a/web-nodejs/views/partials/cart.html
+++ b/web-nodejs/views/partials/cart.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div ng-switch-when="false">
-                <h1>You have not added any items to your Shopping Cart!</h1>
+                <h1>You have not added any items to your Shopping Cart! Krupa</h1>
                 <a ng-href="#/" class="btn btn-default btn-lg">Return to Store</a>
             </div>
         </div>
@@ -35,7 +35,7 @@
 
     <div class="col-md-4 panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title">Shopping Summary</h3>
+            <h3 class="panel-title">Shopping Summary Krupa</h3>
         </div>
         <div class="panel-body">
 
@@ -47,7 +47,7 @@
             <h3>Promotional Shipping Savings: {{cart.shippingPromoSavings | currency}}
             </h3>
             <h2>
-                Total Order Amount: <strong>{{cart.cartTotal | currency}}</strong>
+                Total Order Amount Krupa: <strong>{{cart.cartTotal | currency}}</strong>
             </h2>
         </div>
         <div class="panel-footer">
@@ -57,7 +57,7 @@
 
             <button ng-if="!ssoEnabled()" ng-disabled="true" title="SSO has not been configured" class="btn btn-primary btn-lg" type="button">Sign in unavailable</button>
 
-            <a ng-href="#/" class="btn btn-default btn-lg">Keep Shopping</a>
+            <a ng-href="#/" class="btn btn-default btn-lg">Keep Shopping Krupa</a>
         </div>
     </div>
 </div>
