--- a/web-nodejs/views/index.html
+++ b/web-nodejs/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Red Hat CoolStore Microservices App</title>
+    <title>Travelport CoolStore Microservices App</title>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
